#psw 전체내용검색 수정

--- a/app/views/search/mng_detail.jade
+++ b/app/views/search/mng_detail.jade
@@ -21,8 +21,8 @@ block content
                                     a(href='#') Home
                                 li
                                     a(href='#') 문의 및 담당자
-                                li.active 처리된 내용검색
-                            h4.page-title 처리된 내용검색
+                                li.active 전체내용검색
+                            h4.page-title 전체내용검색
 
                     
                     .row
