--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -120,7 +120,8 @@ block content
                 .row
                     .col-lg-12
                         .card-box
-                            table.table.table-bordered
+                            //table.table.table-bordered
+                            table.table.table-hover
                                 thead
                                     tr
                                         th.text-center(width='50px') 긴급
