#PSW 회사별 상위업무통계/상위별 하위업무통계 화면

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -123,7 +123,7 @@ html
                   li
                     a(href='/statistic/com_higher') 회사별 상위업무통계
                   li
-                    a(href='/statistic/high_lowers') 상위별 하위업무통계
+                    a(href='/statistic/high_lower') 상위별 하위업무통계
                   li
                     a(href='/search/remain_list') 미해결 현황
                   li
