--- a/app/views/statistic/mng_month.jade
+++ b/app/views/statistic/mng_month.jade
@@ -1,11 +1,5 @@
 extends ../layouts/default
 block head
-    
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width,initial-scale=1')
-    meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
-    meta(name='author', content='Coderthemes')
-    link(rel='shortcut icon', href='assets/images/favicon_1.ico')
     title  3-5 담당자월별처리내역
     // Plugins css
     link(href='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
@@ -16,8 +10,6 @@ block head
     link(href='../plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
     link(href='../plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
     link(href='../plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
-    // summernot
-    link(href='../plugins/summernote/dist/summernote.css', rel='stylesheet')
     link(href='../plugins/switchery/switchery.min.css', rel='stylesheet')
     link(href='assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
     link(href='assets/css/core.css', rel='stylesheet', type='text/css')
@@ -32,286 +24,148 @@ block head
     //if lt IE 9
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
-    
-
-    script(src='/isu/js/incident/index.js', type='text/javascript')
-    script(src='/isu/js/search/datepicker.js' type='text/javascript')
-    script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.js')
-    link(rel='stylesheet', href='//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
-
-    // jQuery
-    script(src='assets/js/jquery.min.js')
-    script(src='assets/js/bootstrap.min.js')
-    script(src='assets/js/detect.js')
-    script(src='assets/js/fastclick.js')
-    script(src='assets/js/jquery.slimscroll.js')
-    script(src='assets/js/jquery.blockUI.js')
-    script(src='assets/js/waves.js')
-    script(src='assets/js/wow.min.js')
-    script(src='assets/js/jquery.nicescroll.js')
-    script(src='assets/js/jquery.scrollTo.min.js')
-    script(src='../plugins/switchery/switchery.min.js')
-    script(src='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
-    script(type='text/javascript', src='../plugins/multiselect/js/jquery.multi-select.js')
-    script(type='text/javascript', src='../plugins/jquery-quicksearch/jquery.quicksearch.js')
-    script(src='../plugins/select2/select2.min.js', type='text/javascript')
-    script(src='../plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
-    script(src='../plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
-    script(src='../plugins/moment/moment.js')
-    script(src='../plugins/timepicker/bootstrap-timepicker.min.js')
-    script(src='../plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
-    script(src='../plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
-    script(src='../plugins/bootstrap-daterangepicker/daterangepicker.js')
-    // form summernote
-    script(src='../plugins/summernote/dist/summernote.min.js')
     script(src='assets/js/jquery.core.js')
     script(src='assets/js/jquery.app.js')
 
     script(src='/vendor/jquery/jquery.min.js')
-    
-    script.
-      jQuery(document).ready(function() {
-        alert(tVal);  
-        //advance multiselect start
-        $('#my_multi_select3').multiSelect({
-            selectableHeader: "<input type='text' class='form-control search-input' autocomplete='off' placeholder='search...'>",
-            selectionHeader: "<input type='text' class='form-control search-input' autocomplete='off' placeholder='search...'>",
-            afterInit: function (ms) {
-                var that = this,
-                    $selectableSearch = that.$selectableUl.prev(),
-                    $selectionSearch = that.$selectionUl.prev(),
-                    selectableSearchString = '#' + that.$container.attr('id') + ' .ms-elem-selectable:not(.ms-selected)',
-                    selectionSearchString = '#' + that.$container.attr('id') + ' .ms-elem-selection.ms-selected';
-                that.qs1 = $selectableSearch.quicksearch(selectableSearchString)
-                    .on('keydown', function (e) {
-                        if (e.which === 40) {
-                            that.$selectableUl.focus();
-                            return false;
-                        }
-                    });
-                that.qs2 = $selectionSearch.quicksearch(selectionSearchString)
-                    .on('keydown', function (e) {
-                        if (e.which == 40) {
-                            that.$selectionUl.focus();
-                            return false;
-                        }
-                    });
-            },
-            afterSelect: function () {
-                this.qs1.cache();
-                this.qs2.cache();
-            },
-            afterDeselect: function () {
-                this.qs1.cache();
-                this.qs2.cache();
-            }
-        });
-        // Select2
-        $(".select2").select2();
-        $(".select2-limiting").select2({
-            maximumSelectionLength: 2
-        });
-      });
-
-      //Bootstrap-TouchSpin
-      $(".vertical-spin").TouchSpin({
-        verticalbuttons: true,
-        buttondown_class: "btn btn-primary",
-        buttonup_class: "btn btn-primary",
-        verticalupclass: 'ion-plus-round',
-        verticaldownclass: 'ion-minus-round'
-      });
-      var vspinTrue = $(".vertical-spin").TouchSpin({
-        verticalbuttons: true
-      });
-      if (vspinTrue) {
-        $('.vertical-spin').prev('.bootstrap-touchspin-prefix').remove();
-      }
-      $("input[name='demo1']").TouchSpin({
-        min: 0,
-        max: 100,
-        step: 0.1,
-        decimals: 2,
-        boostat: 5,
-        maxboostedstep: 10,
-        buttondown_class: "btn btn-primary",
-        buttonup_class: "btn btn-primary",
-        postfix: '%'
-      });
-      $("input[name='demo2']").TouchSpin({
-        min: -1000000000,
-        max: 1000000000,
-        stepinterval: 50,
-        buttondown_class: "btn btn-primary",
-        buttonup_class: "btn btn-primary",
-        maxboostedstep: 10000000,
-        prefix: '$'
-      });
-      $("input[name='demo3']").TouchSpin({
-        buttondown_class: "btn btn-primary",
-        buttonup_class: "btn btn-primary"
-      });
-      $("input[name='demo3_21']").TouchSpin({
-        initval: 40,
-        buttondown_class: "btn btn-primary",
-        buttonup_class: "btn btn-primary"
-      });
-      $("input[name='demo3_22']").TouchSpin({
-        initval: 40,
-        buttondown_class: "btn btn-primary",
-        buttonup_class: "btn btn-primary"
-      });
-      $("input[name='demo5']").TouchSpin({
-        prefix: "pre",
-        postfix: "post",
-        buttondown_class: "btn btn-primary",
-        buttonup_class: "btn btn-primary"
-      });
-      $("input[name='demo0']").TouchSpin({
-        buttondown_class: "btn btn-primary",
-        buttonup_class: "btn btn-primary"
-      });
-      // Time Picker
-      jQuery('#timepicker').timepicker({
-        defaultTIme : false
-      });
-      jQuery('#timepicker2').timepicker({
-        showMeridian : false
-      });
-      jQuery('#timepicker3').timepicker({
-        minuteStep : 15
-      });
-
-
-        //colorpicker start
-        $('.colorpicker-default').colorpicker({
-            format: 'hex'
-        });
-        $('.colorpicker-rgba').colorpicker();
-
-        // Date Picker
-        jQuery('#datepicker').datepicker();
-        jQuery('#datepicker-autoclose').datepicker({
-            autoclose: true,
-            todayHighlight: true
-        });
-        jQuery('#datepicker-inline').datepicker();
-        jQuery('#datepicker-multiple-date').datepicker({
-            format: "mm/dd/yyyy",
-            clearBtn: true,
-            multidate: true,
-            multidateSeparator: ","
-        });
-        jQuery('#date-range').datepicker({
-            toggleActive: true
-        });
-        //Date range picker
-        $('.input-daterange-datepicker').daterangepicker({
-            buttonClasses: ['btn', 'btn-sm'],
-            applyClass: 'btn-default',
-            cancelClass: 'btn-primary'
-        });
-        $('.input-daterange-timepicker').daterangepicker({
-            timePicker: true,
-            format: 'MM/DD/YYYY h:mm A',
-            timePickerIncrement: 30,
-            timePicker12Hour: true,
-            timePickerSeconds: false,
-            buttonClasses: ['btn', 'btn-sm'],
-            applyClass: 'btn-default',
-            cancelClass: 'btn-primary'
-        });
-        $('.input-limit-datepicker').daterangepicker({
-            format: 'MM/DD/YYYY',
-            minDate: '06/01/2016',
-            maxDate: '06/30/2016',
-            buttonClasses: ['btn', 'btn-sm'],
-            applyClass: 'btn-default',
-            cancelClass: 'btn-primary',
-            dateLimit: {
-            days: 6
-            }
-        });
-        $('#reportrange span').html(moment().subtract(29, 'days').format('MMMM D, YYYY') + ' - ' + moment().format('MMMM D, YYYY'));
-        $('#reportrange').daterangepicker({
-            format: 'MM/DD/YYYY',
-            startDate: moment().subtract(29, 'days'),
-            endDate: moment(),
-            minDate: '01/01/2016',
-            maxDate: '12/31/2016',
-            dateLimit: {
-            days: 60
-        },
-            showDropdowns: true,
-            showWeekNumbers: true,
-            timePicker: false,
-            timePickerIncrement: 1,
-            timePicker12Hour: true,
-            ranges: {
-            'Today': [moment(), moment()],
-            'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
-            'Last 7 Days': [moment().subtract(6, 'days'), moment()],
-            'Last 30 Days': [moment().subtract(29, 'days'), moment()],
-            'This Month': [moment().startOf('month'), moment().endOf('month')],
-            'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
-            },
-            opens: 'left',
-            drops: 'down',
-            buttonClasses: ['btn', 'btn-sm'],
-            applyClass: 'btn-success',
-            cancelClass: 'btn-default',
-            separator: ' to ',
-            locale: {
-            applyLabel: 'Submit',
-            cancelLabel: 'Cancel',
-            fromLabel: 'From',
-            toLabel: 'To',
-            customRangeLabel: 'Custom',
-            daysOfWeek: ['Su', 'Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa'],
-            monthNames: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
-            firstDay: 1
-            }
-        }, function (start, end, label) {
-            console.log(start.toISOString(), end.toISOString(), label);
-            $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
-        });
-script.
-    jQuery(document).ready(function(){
-        $('.summernote').summernote({
-            height: 250,                 // set editor height
-            minHeight: null,             // set minimum height of editor
-            maxHeight: null,             // set maximum height of editor
-            focus: false                 // set focus to editable area after initializing summernote
-        });
-        $('.inline-editor').summernote({
-            airMode: true
-        });
-    });
-
 
 block content
-      // ==============================================================
-      // Start right Content here
-      // ==============================================================
-      .content-page
-        // Start content
+    .content-page
         .content
-          .container
-            // Page-Title
-            .row
-              .col-sm-12
-                .page-title-box
-                  ol.breadcrumb.pull-right
-                    li
-                      a(href='#') Home
-                    li
-                      a(href='#') SD 담당자
-                    li.active 담당자월별처리내역
-                  h4.page-title 담당자월별처리내역
-            // start Search Area
-            .row
-              .col-lg-12
-                .card-box
-                  form.form-horizontal.group-border-dashed(action='#')
-                    .form-group
-                       작업중입니다.......
+            .container
+                .row
+                    .col-sm-12
+                        .page-title-box
+                            ol.breadcrumb.pull-right
+                                li
+                                    a(href='#') Home
+                                li
+                                    a(href='#') SD 통계
+                                li.active 담당자별 월별 처리내역
+                            h4.page-title 담당자별 월별 처리내역
+                .row
+                    .col-lg-12
+                        .card-box.m-t-10
+                            form.form-horizontal.group-border-dashed(action='#')
+                                .form-group
+                                    label.col-sm-2.control-label 검색년도
+                                    .col-sm-2
+                                        select.form-control
+                                            option 2012
+                                            option 2013
+                                            option 2014
+                                            option 2015
+                                            option 2016
+                                            option(selected='') 2017
+                                            option 2018
+                                            option 2019
+                                            option 2020
+                                            option 2021
+                                .form-group
+                                    label.col-sm-2.control-label 담당자
+                                    .col-sm-2
+                                        select.form-control
+                                            option 선택하지않음
+                                            option(selected='') 박선우
+                                            option 김상엽
+                                            option 항목1
+                                            option 항목2
+                                            option 항목3
+                                            option 항목4
+                                            option 항목5
+                                    label.col-sm-2.control-label 상위업무
+                                    .col-sm-2
+                                        select.form-control
+                                            option 전체
+                                            option 항목1
+                                            option 항목2
+                                            option 항목3
+                                            option 항목4
+                                            option 항목5
+                                    .col-sm-2
+                                        button.btn.btn-primary(type='button')
+                                            i.fa.fa-search.m-r-5
+                                            | 조회
+                .row
+                    .col-lg-12
+                        .card-box
+                            table.table.table-bordered
+                                thead
+                                    tr
+                                        th.font-12(width='5%') 월
+                                        th.font-12(width='20%') 상위업무
+                                        th.font-12(width='') 하위업무
+                                        th.font-12(width='10%') 접수건수
+                                        th.font-12(width='10%') 해결건수
+                                        th.font-12(width='10%') 해결률(%)
+                                        th.font-12(width='10%') 평점
+                                tbody
+                                    tr
+                                        th.valign-middle.text-primary(scope='row', rowspan='9')
+                                            b 01
+                                        td.valign-middle(rowspan='2') 계정관리
+                                        td E-MAIL 계정관리
+                                        td 8
+                                        td 8
+                                        td 100.0
+                                        td 5.0
+                                    tr.bg-muted
+                                        td 소 계
+                                        td 8
+                                        td 8
+                                        td 100.0
+                                        td 5.0
+                                    tr
+                                        td.valign-middle(rowspan='6') 그룹웨어
+                                        td 전자결재
+                                        td 8
+                                        td 8
+                                        td 100.0
+                                        td 5.0
+                                    tr
+                                        td 공통기능
+                                        td 8
+                                        td 8
+                                        td 100.0
+                                        td 5.0
+                                    tr
+                                        td 이메일
+                                        td 8
+                                        td 8
+                                        td 100.0
+                                        td 5.0
+                                    tr
+                                        td 문서관리
+                                        td 8
+                                        td 8
+                                        td 100.0
+                                        td 5.0
+                                    tr
+                                        td 게시판
+                                        td 8
+                                        td 8
+                                        td 100.0
+                                        td 5.0
+                                    tr.bg-muted
+                                        td 소 계
+                                        td 8
+                                        td 8
+                                        td 100.0
+                                        td 5.0
+                                    tr.bg-primary10
+                                        td.text-center(colspan='2') 월 계
+                                        td 8
+                                        td 8
+                                        td 100.0
+                                        td 5.0
+                                    //
+                                        <tr class="bg-primary10 border-top">
+                                        <td colspan="2" class="text-center text-primary"><b>합 계</b></td>
+                                        <td class="text-primary"><b>6528</b></td>
+                                        <td class="text-primary"><b>133</b></td>
+                                        <td class="text-primary"><b>6121</b></td>
+                                        <td class="text-primary"><b>3</b></td>
+                                        <td class="text-primary"><b>97.8</b></td>
+                                        <td class="text-primary"><b>4.4</b></td>
+                                        </tr>
+block footer
