--- a/app/views/search/remain_list.jade
+++ b/app/views/search/remain_list.jade
@@ -1,6 +1,6 @@
 extends ../layouts/default
 block head
-    title  1-4 처리된 내용검색
+    title  3-4 미해결 현황
     // summernot
     link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
 
@@ -52,7 +52,7 @@ block head
     //첨부파일
     script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
 
-    script(src='/isu/js/search/user_list.js', type='text/javascript')
+    script(src='/isu/js/search/remain_list.js', type='text/javascript')
 
 block content
     .content-page
@@ -66,8 +66,8 @@ block content
                                     a(href='#') Home
                                 li
                                     a(href='#') 문의 및 담당자
-                                li.active 미해결 검색
-                            h4.page-title 미해결 검색
+                                li.active 미해결 현황
+                            h4.page-title 미해결 현황
                 .row
                     .col-lg-12
                         .card-box
@@ -82,6 +82,8 @@ block content
                                                     option(value ='#{higherprocess[i].higher_cd}') #{higherprocess[i].higher_nm}
                                                 - }
                                             - } 
+
+                                    
                                 .form-group
                                     label.col-sm-2.control-label 검색기간
                                     .col-sm-4
@@ -115,7 +117,7 @@ block content
                                     tr
                                         th(class='text-center' width='16%') 상위업무명
                                         th(class='text-center' width='16%') 하위업무명
-                                        th(class='text-center' id='title') 제목
+                                        th(class='text-center') 제목
                                         th(class='text-center' width='15%') 등록일
                                         th(class='text-center' width='15%') 담당자
                                 tbody(id='more_list')
