--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -119,3 +119,9 @@ block content
                                                                 select.form-control(name='usermanage[group_flag]')
                                                                     option(value='out' Selected) 외부사용자 
                                                                     option(value='in') 내부사용자
+                                                        .form-group
+                                                            label.col-sm-2.control-label 승인여부
+                                                            .col-sm-9
+                                                                select.form-control(id='access_yn' name='usermanage[access_yn]' type='text')
+                                                                    option(value='Y') 승인 
+                                                                    option(value='N' Selected) 미승인
