#psw default.jade 상단경로

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -53,11 +53,11 @@ html
                 span.clearfix
               ul.nav.navbar-nav.hidden-xs
                 li
-                  a.waves-effect(href='/question/new') 문의하기
+                  a.waves-effect(href='/incident/new/문의하기') 문의하기
                 li
-                  a.waves-effect(href='/incident/index') 처리진행현황
+                  a.waves-effect(href='/incident') 처리진행현황
                 li
-                  a.waves-effect(href='/account/') 자주묻는질문과답
+                  a.waves-effect(href='/search/user_qna') 자주묻는질문과답
                 form.navbar-left.app-search.pull-left.hidden-xs(role='search')
                   input.form-control.app-search-input(type='text', placeholder='Search...')
                   a(href='')
