#KSY 유저정보 화면 수정

--- a/app/views/usermanage/index.jade
+++ b/app/views/usermanage/index.jade
@@ -75,13 +75,13 @@ block content
                                                     table.table.table-striped
                                                         thead
                                                             tr
-                                                                th.stretch 회사명
-                                                                th email
-                                                                th 사원명
-                                                                th 부서명
-                                                                th 직위
-                                                                th 직책
-                                                                th 핸드폰번호
+                                                                th(width='20%') 회사명
+                                                                th(width='20%') email
+                                                                th(width='10%') 사원명
+                                                                th(width='20%') 부서명
+                                                                th(width='8%') 직위
+                                                                th(width='8%') 직책
+                                                                th(width='14%') 핸드폰번호
                                                         tbody
                                                             - if (usermanage.length > 0) {
                                                                 // - for( var i = 0 ; length = usermanage.length > i ; i++ ){ //속도가 빠르다고 알고 있음.
