--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -153,7 +153,7 @@ html
                   li
                     a(href='/companyBusiness/') 회사별 상위업무지정
                   li
-                    a(href='gw_sub4_6.html') 처리구분 코드조회
+                    a(href='/processGubun/') 처리구분 코드조회
                   li
                     a(href='gw_sub4_7.html') 업무별 담당자현황
                   li
